# PS_4

./: CMakeLists.txt  CMakePresets.json  PS_4.cpp  PS_4.h  client.cpp  client.h  clientwindow.cpp  clientwindow.h  main.cpp  ocrclient.cpp  ocrclient.h  server.cpp
gui/: main_window.cpp  main_window.h
proto/: service.proto
src/: client.cpp  common.h  ocr_worker.h  server.cpp
